--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,13 @@ _site
 Gemfile
 Gemfile.lock
 node_modules
-package.json
+package.json# Created by https://www.gitignore.io/api/vim
+
+### Vim ###
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
